<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screen.welcome.WelcomeViewModel" />
    </data>

    <!--
        It's fine to use here linear layout, it's more effective,
        but tho I decided to use here constraint layout, because it's more intuitive
        for me in layout inspector, i.e. for development purposes. If I used linear layout here,
        I should use here weight and gravity props.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.welcome.WelcomeFragment">

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="@{() -> viewModel.onButtonClicked()}"
            style="@style/colredButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcomeLabel"
            app:layout_constraintStart_toStartOf="@+id/welcomeLabel"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

        <TextView
            android:id="@+id/logoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_store_inventory"
            app:layout_constraintBottom_toTopOf="@+id/welcomeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/header" />

        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@+id/goButton"
            app:layout_constraintEnd_toEndOf="@+id/logoLabel"
            app:layout_constraintStart_toStartOf="@+id/logoLabel"
            app:layout_constraintTop_toBottomOf="@+id/logoLabel"
            style="@style/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>