<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screen.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="64dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/form_padding_vertical"
                android:paddingBottom="@dimen/form_padding_vertical"
                android:paddingStart="@dimen/form_padding_horizontal"
                android:paddingEnd="@dimen/form_padding_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text"
                    android:labelFor="@id/emailEditText"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:importantForAutofill="yes"
                    style="@style/text"
                    android:text="@={viewModel.fieldLogin}"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text"
                    android:labelFor="@id/passwordEditText"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    android:autofillHints="password"
                    android:ems="10"
                    android:importantForAutofill="yes"
                    style="@style/text"
                    android:text="@={viewModel.fieldPassword}"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    style="@style/colredButton"
                    android:onClick="@{() -> viewModel.onButtonClicked()}"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_padding_vertical"
                    android:layout_marginBottom="@dimen/field_padding_vertical"
                    style="@style/borderlessButton"
                    android:onClick="@{() -> viewModel.onButtonClicked()}"
                    android:text="@string/register" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</layout>